--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,11 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Configure Git
+        run: |
+          git config --global user.email "ral77ro@gmail.com"
+          git config --global user.name "Rodrigo"
+
       - name: Update version
         run: |
           npm version patch -m "Bump version to %s"
