--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,16 +18,16 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Configure Git
+      - name: Bump version and commit
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
-          git config --global user.email "ral77ro@gmail.com"
-          git config --global user.name "Rodrigo"
-
-      - name: Update version
-        run: |
-          npm version patch -m "Bump version to %s"
+          cd config
+          git config --global user.name "github-actions"
+          git config --global user.email "github-actions@github.com"
+          npm version patch
+          git commit -am "ci: bump version to $(node -p -e "require('./package.json').version")"
           git push
-          git push --tags
 
       - name: Build
         run: npm run build
