--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,8 +25,11 @@ jobs:
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
           npm version patch
-          git commit -am "ci: bump version to $(node -p -e "require('./package.json').version")"
+          git add package.json package-lock.json
+          git commit -m "ci: bump version to $(node -p -e "require('./package.json').version")" || echo "No changes to commit"
           git push
+          git tag v$(node -p -e "require('./package.json').version")
+          git push origin --tags
 
       - name: Build
         run: npm run build
