--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: "21.7.3"
+          registry-url: "https://registry.npmjs.org"
 
       - name: Install dependencies
         run: npm ci
